interacting with fund me on local network

--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Fund Me App</title>
-  </head>
-  <body>
-    What's good?
-    <script src="./index.js" type="module"></script>
-    <button id="connectButton">Connect</button>
-    <button id="fundButton">Fund</button>
-  </body>
+    <head>
+        <title>Fund Me App</title>
+    </head>
+    <body>
+        Fund Me App <br />
+        <script src="./index.js" type="module"></script>
+        <br />
+        <button id="connectButton">Connect</button> <br />
+        <br />
+        <button id="balanceButton">getBalance</button> <br />
+        <br />
+        <button id="withdrawButton">withdraw</button><br />
+        <br />
+        <!--form-->
+        <label for="fund">ETH Amount</label>
+        <input id="ethAmount" placeholder="0.1" /> <br /><br />
+        <button id="fundButton">Fund</button>
+        <!--form-->
+    </body>
 </html>
